✨ add mongodb
結構化日誌
更新 api 文檔回應格式
更新腳本使用 config 生成程式
